--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.1",
+    "@lucide/astro": "^0.525.0",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.12.3",
+    "astro-theme-toggle": "^0.6.1",
     "tailwindcss": "^4.1.11"
   }
 }
