--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.1",
+    "@astrojs/node": "^9.3.0",
     "@lucide/astro": "^0.525.0",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.12.3",
