Add rehype-autolink-headings (#12)

--- a/package.json
+++ b/package.json
@@ -1,13 +1,6 @@
 {
   "name": "portfolio",
-  "type": "module",
   "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
   "dependencies": {
     "@astrojs/mdx": "^4.3.1",
     "@astrojs/node": "^9.3.0",
@@ -15,6 +8,14 @@
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.12.3",
     "astro-theme-toggle": "^0.6.1",
+    "rehype-autolink-headings": "^7.1.0",
     "tailwindcss": "^4.1.11"
-  }
+  },
+  "scripts": {
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
+  "type": "module"
 }
