Add rehype-external-links (#11)

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "^5.12.3",
     "astro-theme-toggle": "^0.6.1",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-external-links": "^3.0.0",
     "tailwindcss": "^4.1.11"
   },
   "scripts": {
